5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1811_2565.log
== TEST (2019-06-09 18:19:46) 
-- CODE:
from numpy import *
media_final=(array(eval(input("digite as medias finais:")))
presenca=(array(eval(input("digite a presenca:")))
carga_horaria=int(input("digite a carga horaria:"))
n=(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (presenca[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(presenca[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 3
    presenca=(array(eval(input()))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:19:57) 
-- CODE:
from numpy import *
media_final=(array(eval(input("digite as medias finais:")))
presenca=(array(eval(input("digite a presenca:")))
carga_horaria=int(input("digite a carga horaria:"))
n=(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (presenca[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(presenca[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 3
    presenca=(array(eval(input()))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:20:46) 
-- CODE:
from numpy import *
media_final=(array(eval(input("digite as medias finais:")))
frequencia=(array(eval(input("digite a frequencia:")))
carga_horaria=int(input("digite a carga horaria:"))
n=(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 3
    frequencia=(array(eval(input()))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:21:37) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=int(input("digite a carga horaria:"))
n=(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 5
    n=(3, dytpe=int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:00) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=int(input("digite a carga horaria:"))
n=(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 5
    n=(3, dytpe=int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:10) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=int(input("digite a carga horaria:")
n=(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 5
    n=(3, dytpe=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:36) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=int(input("digite a carga horaria:")
n=zeros(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 5
    n=zeros(3, dytpe=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:22:48) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:")
n=zeros(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 5
    n=zeros(3, dytpe=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:23:12) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
n=zeros(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r)
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
File "XXXX", line 8
    if(media_final[i]>=5) and (frequencia[i]>=r)
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:23:51) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
n=zeros(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:25:03) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
n=zeros(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:25:08) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
n=zeros(3, dytpe=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- EXECUTION TIME:
1.222
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2565/main.py", line 5, in <module>
    n=zeros(3, dytpe=int)
TypeError: 'dytpe' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:25:32) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
n=zeros(3, dtype=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:26:54) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
n=zeros(3, dtype=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:26:55) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
n=zeros(3, dtype=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		n=n[0]+1
	if(media_final[i]<5):
		n=n[1]+1
	if(frequencia[i]<r):
		n=n[2]+1
print(n)
			 
			 
			 
			 
-- EXECUTION TIME:
1.08318
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2565/main.py", line 9, in <module>
    n=n[0]+1
IndexError: invalid index to scalar variable.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:28:00) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
v=zeros(3, dtype=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		v=v[0]+1
	if(media_final[i]<5):
		v=v[1]+1
	if(frequencia[i]<r):
		v=v[2]+1
print(v)
			 
			 
			 
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 18:29:47) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
v=zeros(3, dtype=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		v[0]=v[0]+1
	if(media_final[i]<5):
		v[1]=v[1]+1
	if(frequencia[i]<r):
		v[2]=v[2]+1
print(v)
			 
			 
			 
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 18:30:09) 
-- CODE:
from numpy import *
media_final=array(eval(input("digite as medias finais:")))
frequencia=array(eval(input("digite a frequencia:")))
carga_horaria=float(input("digite a carga horaria:"))
v=zeros(3, dtype=int)
r=carga_horaria*75/100
for i in range(size(media_final)):
	if(media_final[i]>=5) and (frequencia[i]>=r):
		v[0]=v[0]+1
	if(media_final[i]<5):
		v[1]=v[1]+1
	if(frequencia[i]<r):
		v[2]=v[2]+1
print(v)
			 
			 
			 
			 
-- EXECUTION TIME:
1.24001
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
